Point to remote getit image to see if that solves phantomjs build problem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - setup_dbs
 
   test:
-    build: .
+    # build: .
+    image: nyulibraries/getit
     environment:
       RAILS_ENV: test
     env_file:
@@ -26,7 +27,8 @@ services:
       - setup_dbs
 
   setup_dbs:
-    build: .
+    # build: .
+    image: nyulibraries/getit
     environment:
       GETIT_DB_HOST: db
     command: bash -c "sleep 5; rake db:setup"
