--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,6 +2,21 @@ FROM ruby:2.3.6
 
 ENV INSTALL_PATH /app
 
+RUN apt-get update -qq && apt-get install -y \
+  bzip2 \
+  curl \
+  git \
+  libfontconfig \
+  libfreetype6 \
+  vim \
+  wget
+
+# PhantomJS
+ENV PHANTOMJS_VERSION 2.1.1
+
+RUN wget --no-check-certificate -q -O - https://cnpmjs.org/mirrors/phantomjs/phantomjs-$PHANTOMJS_VERSION-linux-x86_64.tar.bz2 | tar xjC /opt
+RUN ln -s /opt/phantomjs-$PHANTOMJS_VERSION-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
+
 RUN groupadd -g 2000 docker -r && \
     useradd -u 1000 -r --no-log-init -m -d $INSTALL_PATH -g docker docker
 USER docker
@@ -14,10 +29,6 @@ RUN chmod a+x /tmp/wait-for-it.sh
 
 # For working with locally installed gems
 #COPY vendor ./vendor
-
-# Add github to known_hosts
-RUN mkdir -p ~/.ssh
-RUN ssh-keyscan github.com >> ~/.ssh/known_hosts
 
 # Install gems in cachable way
 COPY Gemfile Gemfile.lock ./
