Reconfig circle to use workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,73 @@
+docker-defaults: &docker-defaults
+  docker:
+    - image: docker:18.03.0-ce-git
+  working_directory: ~/app
+
+dc-setup: &dc-setup
+  run:
+    name: Setup docker-compose dependency
+    command: |
+      apk add --no-cache python3
+      pip3 install docker-compose==1.20.1
+
+test: &test
+  run:
+    name: Test
+    command: docker-compose run test
+
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/ruby:2.3
-    working_directory: ~/getit
+  deploy-dev:
+    <<: *docker-defaults
     steps:
       - checkout
       - setup_remote_docker
+      - <<: *dc-setup
+      - <<: *test
       - run:
-          name: Install Docker Compose
+          name: Deploy into staging via Jenkins
           command: |
-            set -x
-            sudo curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+            curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
 
+  deploy-qa:
+    <<: *docker-defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - <<: *dc-setup
+      - <<: *test
       - run:
-          name: Start container and run tests
+          name: Deploy into QA via Jenkins
           command: |
-            docker-compose run test rake
+            curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20QA%20Deploy/build/api
 
-      - deploy:
-          name: Deploy
+  deploy-prod:
+    <<: *docker-defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+      - <<: *dc-setup
+      - <<: *test
+      - run:
+          name: Deploy into production via Jenkins
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              echo "Deploying to production"
-              curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
-            elif [ "${CIRCLE_BRANCH}" == "qa" ]; then
-              echo "Deploying to QA"
-              curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20QA%20Deploy/build/api
-            elif [[ "${CIRCLE_BRANCH}" =~ (.+) ]]; then
-              echo "Deploying to development"
-              curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
-            fi
+            curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
+
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - deploy-dev:
+          filters:
+            branches:
+              ignore:
+                - master
+                - qa
+      - deploy-qa:
+          filters:
+            branches:
+              only: qa
+      - deploy-prod:
+          filters:
+            branches:
+              only: master
