--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -30,6 +30,10 @@ RUN chmod a+x /tmp/wait-for-it.sh
 # For working with locally installed gems
 #COPY vendor ./vendor
 
+# Add github to known_hosts
+RUN mkdir -p ~/.ssh
+RUN ssh-keyscan github.com >> ~/.ssh/known_hosts
+
 # Install gems in cachable way
 COPY Gemfile Gemfile.lock ./
 RUN bundle config --global github.https true
