--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      run:
+      - run:
         name: Setup docker-compose dependency
         command: |
           apk add --no-cache python3
           pip3 install docker-compose==1.20.1
-      run:
+      - run:
         name: Test
         command: docker-compose run test
 
