--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -409,7 +409,7 @@ NS:
       library_symbol: <%= ENV['EZBORROW_NS_LIBRARY_SYMBOL'] %>
       api_key: <%= ENV['EZBORROW_NS_API_KEY'] %>
       find_item_patron_barcode: <%= ENV['EZBORROW_NS_PATRON_BARCODE'] %>
-      html_query_base_url: https://login.library.nyu.edu/ezborrow?ls=THENEWSCHOOL
+      html_query_base_url: https://login.library.nyu.edu/ezborrow/ns
       api_base: <%= ENV['EZBORROW_NS_API_BASE'] %>
       #
       # Optional params
