--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,15 @@ jobs:
           command: |
             docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
 
+  deploy-reindex:
+    <<: *docker-defaults
+    steps:
+      - setup_remote_docker
+      - run:
+          name: Deploy into reindex environment via Jenkins
+          command: |
+            docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Reindex%20Deploy/build/api
+
 workflows:
   version: 2
   build-test-and-deploy:
@@ -66,6 +75,12 @@ workflows:
             branches:
               only: qa
       - deploy-prod:
+          requires:
+              - test
+          filters:
+            branches:
+              only: master
+      - deploy-reindex:
           requires:
               - test
           filters:
