Skip building on all git triggers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,4 +85,4 @@ workflows:
               - test
           filters:
             branches:
-              only: master
+              only: nobranchnameever
