--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,14 +44,10 @@ run_tests: &run_tests
       docker-compose run test
 
 junit_reports: &junit_reports
-  - run:
-      name: Get Junit tests from stopped container
-      when: always
-      command: docker cp getit_test_run_1:/app/test-results .
-  - store_test_results:
-      path: ~/app/test-results
-  - store_artifacts:
-      path: ~/app/test-results
+  run:
+    name: Get Junit tests from stopped container
+    when: always
+    command: docker cp getit_test_run_1:/app/test-results .
 
 version: 2
 jobs:
@@ -65,7 +61,11 @@ jobs:
       - <<: *build_docker
       - <<: *push_docker
       - <<: *run_tests
-      - <: *junit_reports
+      - <<: *junit_reports
+      - store_test_results:
+          path: ~/app/test-results
+      - store_artifacts:
+          path: ~/app/test-results
 
   deploy-dev:
     <<: *docker-defaults
@@ -97,7 +97,18 @@ jobs:
   deploy-reindex:
     <<: *docker-defaults
     steps:
+      - checkout
       - setup_remote_docker
+      - <<: *auth_ecr
+      - <<: *pull_docker
+      - <<: *build_docker
+      - <<: *push_docker
+      - <<: *run_tests
+      - <<: *junit_reports
+      - store_test_results:
+          path: ~/app/test-results
+      - store_artifacts:
+          path: ~/app/test-results
       - run:
           name: Deploy into reindex environment via Jenkins
           command: |
