Why are passing tests failing circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,6 @@ push_docker: &push_docker
       docker push ${ECR_DOMAIN}/${IMAGE_NAME}:${BRANCH_NO_SLASH}
       docker push ${ECR_DOMAIN}/${IMAGE_NAME}:${BRANCH_NO_SLASH}-${CIRCLE_SHA1}
 
-run_tests: &run_tests
-  run:
-    name: Run tests
-    command: |
-      export BRANCH_NO_SLASH=${CIRCLE_BRANCH//\//_}
-      docker-compose run test
-
 junit_reports: &junit_reports
   run:
     name: Get Junit tests from stopped container
@@ -60,7 +53,11 @@ jobs:
       - <<: *pull_docker
       - <<: *build_docker
       - <<: *push_docker
-      - <<: *run_tests
+      - run:
+          name: Run tests
+          command: |
+            export BRANCH_NO_SLASH=${CIRCLE_BRANCH//\//_}
+            docker-compose run test
       - <<: *junit_reports
       - store_test_results:
           path: ~/app/test-results
@@ -94,25 +91,25 @@ jobs:
           command: |
             docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
 
-  deploy-reindex:
-    <<: *docker-defaults
-    steps:
-      - checkout
-      - setup_remote_docker
-      - <<: *auth_ecr
-      - <<: *pull_docker
-      - <<: *build_docker
-      - <<: *push_docker
-      - <<: *run_tests
-      - <<: *junit_reports
-      - store_test_results:
-          path: ~/app/test-results
-      - store_artifacts:
-          path: ~/app/test-results
-      - run:
-          name: Deploy into reindex environment via Jenkins
-          command: |
-            docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Reindex%20Deploy/build/api
+  # deploy-reindex:
+  #   <<: *docker-defaults
+  #   steps:
+  #     - checkout
+  #     - setup_remote_docker
+  #     - <<: *auth_ecr
+  #     - <<: *pull_docker
+  #     - <<: *build_docker
+  #     - <<: *push_docker
+  #     - <<: *run_tests
+  #     - <<: *junit_reports
+  #     - store_test_results:
+  #         path: ~/app/test-results
+  #     - store_artifacts:
+  #         path: ~/app/test-results
+  #     - run:
+  #         name: Deploy into reindex environment via Jenkins
+  #         command: |
+  #           docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Reindex%20Deploy/build/api
 
 workflows:
   version: 2
