--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ x-test-env: &test-env
     BRANCH_NO_SLASH:
     CI:
     COVERALLS_REPO_TOKEN:
+    TERM: xterm
+    PAGER: more
   env_file:
     - test.env
 x-dev-env: &dev-env
@@ -43,6 +45,8 @@ services:
 
   test:
     <<: *test-env
+    tty: true
+    stdin_open: true
     command: ["/tmp/wait-for-it.sh", "db:3306", "--", "bundle", "exec", "rake"]
     depends_on:
       - setup_test
