--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -47,11 +47,11 @@ default:
       suppress_urls: [ !ruby/regexp '/getit\.library\.nyu\.edu/', !ruby/regexp '/www\.loc\.gov\/catdir\/toc/']
       ez_proxy: !ruby/regexp '/https\:\/\/(ez)?proxy\.library\.nyu\.edu\/login\?url=/'
       service_types:
-        - primo_source
-        - holding_search
-        - fulltext
-        - table_of_contents
         - referent_enhance
+        # - primo_source
+        # - holding_search
+        # - fulltext
+        # - table_of_contents
 
     # Priority 3
     # Blind link to price comparison site AllBooks.com.
@@ -103,6 +103,7 @@ default:
       source_attributes:
         - from_aleph
         - requestability
+      disabled: true
 
     CoverThing:
       type: CoverThing
@@ -254,6 +255,7 @@ NYU:
           existing_type: fulltext
       service_types:
           - document_delivery
+      disabled: true
     EZBorrow:
       type: BorrowDirectAdaptor
       priority: d
@@ -271,6 +273,7 @@ NYU:
       http_timeout: 60
       # log all BD API calls for analysis
       bd_api_log_level: info
+      disabled: true
 NYUAD:
   name: NYU Abu Dhabi Library
   parent_code: NYU
