Add ssh agent to docker image; add deploy service for host SSH usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,14 @@ services:
       - "3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+
+  deploy:
+    <<: *test-env
+    tty: true
+    stdin_open: true
+    command: "bundle exec cap staging deploy:setup && bundle exec cap staging deploy"
+    environment:
+      GIT_BRANCH: "$GIT_BRANCH"
+      SSH_AUTH_SOCK: '/ssh-agent'
+    volumes:
+      - "${SSH_AUTH_SOCK}:/ssh-agent"
