Docker Deploy - use host auth sock instead

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,4 +77,4 @@ services:
       GIT_BRANCH: "$GIT_BRANCH"
       SSH_AUTH_SOCK: '/ssh-agent'
     volumes:
-      - "${SSH_AUTH_SOCK}:/ssh-agent"
+      - "${HOST_SSH_AUTH_SOCK}:/ssh-agent"
