--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,8 @@ jobs:
       - run:
           name: Deploy into staging via Jenkins
           command: |
-            docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
+            #docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
+            docker run --rm appropriate/curl -u $NEW_JENKINS_USERNAME:$NEW_JENKINS_API_KEY -X POST https://jenkinsci.library.nyu.edu/job/GetIt%20Dev%20Deploy/build/api
 
   deploy-qa:
     <<: *docker-defaults
