--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
           name: Deploy into staging via Jenkins
           command: |
             #docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Development%20Deploy/build/api
-            docker run --rm appropriate/curl -u $NEW_JENKINS_USERNAME:$NEW_JENKINS_API_KEY -X POST https://jenkinsci.library.nyu.edu/job/GetIt%20Dev%20Deploy/buildWithParameters\?token\=TESTTOKEN\&GIT_COMMIT\=$CIRCLE_SHA1
+            docker run --rm appropriate/curl -u $JENKINS_CI_USERNAME:$JENKINS_CI_API_KEY -X POST https://jenkinsci.library.nyu.edu/job/GetIt%20Dev%20Deploy/buildWithParameters\?GIT_COMMIT\=$CIRCLE_SHA1
 
   deploy-qa:
     <<: *docker-defaults
@@ -84,7 +84,8 @@ jobs:
       - run:
           name: Deploy into QA via Jenkins
           command: |
-            docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20QA%20Deploy/build/api
+            #docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20QA%20Deploy/build/api
+            docker run --rm appropriate/curl -u $JENKINS_CI_USERNAME:$JENKINS_CI_API_KEY -X POST https://jenkinsci.library.nyu.edu/job/GetIt%20QA%20Deploy/buildWithParameters\?GIT_COMMIT\=$CIRCLE_SHA1
 
   deploy-prod:
     <<: *docker-defaults
@@ -93,7 +94,8 @@ jobs:
       - run:
           name: Deploy into production via Jenkins
           command: |
-            docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
+            #docker run --rm appropriate/curl -u $JENKINS_USERNAME:$JENKINS_API_KEY -X POST http://jenkins.library.nyu.edu/view/GetIt/job/GetIt%20Production%20Deploy/build/api
+            docker run --rm appropriate/curl -u $JENKINS_CI_USERNAME:$JENKINS_CI_API_KEY -X POST https://jenkinsci.library.nyu.edu/job/GetIt%20Prod%20Deploy/buildWithParameters\?GIT_COMMIT\=$CIRCLE_SHA1
 
 workflows:
   version: 2
