--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,10 +72,9 @@ services:
     tty: true
     stdin_open: true
     command: "mkdir -p ~/.ssh && touch ~/.ssh/known_hosts && ssh-keyscan github.com >> ~/.ssh/known_hosts && \
-              bundle exec cap staging deploy:setup && bundle exec cap staging deploy"
+              bundle exec cap $DEPLOY_ENV deploy:setup && bundle exec cap $DEPLOY_ENV -S $GIT_COMMIT deploy"
     user: root
     environment:
-      GIT_BRANCH: "$GIT_BRANCH"
       SSH_AUTH_SOCK: '/ssh-agent'
     volumes:
       - "${HOST_SSH_AUTH_SOCK}:/ssh-agent"
