--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -390,6 +390,21 @@ NS:
       token: <%= ENV['NS_BX_TOKEN'] %>
       openurl_base: "/ns/resolve?"
       max_records: 3
+    NS_ILLiad:
+      name: ILLiad
+      type: OpenURLService
+      base_url: <%= (ENV['ILLIAD_BASE_URL'] || 'https://ill.library.nyu.edu/illiad/ZMU/illiad.dll/OpenURL') %>
+      display_text: New School Interlibrary Loan
+      priority: c
+      preempted_by:
+        -
+          existing_service: NYU_Primo_Source
+          existing_type: holding
+        -
+          existing_service: NS_SFX
+          existing_type: fulltext
+      service_types:
+          - document_delivery
  #   NSUlrichsLink:
  #     type: UlrichsLink
  #     display_name: Ulrich's Directory
